'Upgraded to Vert.x 5.0.11'