@@ -1,6 +1,6 @@
 
 buildscript {
-  ext.kotlin_version = "2.2.20-RC"
+  ext.kotlin_version = "2.3.20"
 
   dependencies {
     classpath "com.google.protobuf:protobuf-gradle-plugin:0.9.5"
@@ -9,15 +9,11 @@ buildscript {
 
 plugins {
     // Apply the org.jetbrains.kotlin.jvm Plugin to add support for Kotlin.
-    id "org.jetbrains.kotlin.jvm" version "2.2.20-RC"
-    id "org.jetbrains.kotlin.plugin.allopen" version "2.2.20-RC"
+    id "org.jetbrains.kotlin.jvm" version "2.3.20"
+    id "org.jetbrains.kotlin.plugin.allopen" version "2.3.20"
 
 
     id "application"
-
-//    id "com.github.johnrengelman.shadow" version "8.1.1"
-
-//    id "com.gradleup.shadow" version "9.1.0"
 
     id "nu.studer.jooq" version "8.0"
 
@@ -38,10 +34,10 @@ repositories {
 version = "4.0.0"
 
 ext {
-  vertxVersion = "5.0.4"
+  vertxVersion = "5.0.11"
   protoVersion = "3.25.5"
   grpcVersion = "1.72.0"
-  hibernateVersion = "7.0.10.Final"
+  hibernateVersion = "7.2.5.Final"
 }
 
 def mainVerticleName = "golf.handicap.vertx.MainVerticle"
@@ -50,16 +46,17 @@ def junitJupiterVersion = "5.7.0"
 def watchForChange = "src/main/**/*"
 def doOnChange = "${projectDir}/gradlew classes"
 def OS = System.getProperty("os.name").toLowerCase();
-def javaTargetVersion = 21
+def javaTargetVersion = 25
 
 def mainClassName = "io.vertx.core.Launcher"
 application {
     getMainClass().set(mainClassName)
+    applicationDefaultJvmArgs = ['--sun-misc-unsafe-memory-access=allow', '--enable-native-access=ALL-UNNAMED']
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
+    sourceCompatibility = JavaVersion.VERSION_25
+    targetCompatibility = JavaVersion.VERSION_25
 }
 
 tasks.register('copyDatabaseConfig', Copy) {
@@ -85,23 +82,6 @@ tasks.register('jooqGenerate', JavaExec) {
     dependsOn copyDatabaseConfig
 }
 
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += ["--enable-native-access=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED"]
-
-    if(java.targetCompatibility  >= JavaVersion.VERSION_24) {
-//        jvmArgs += ["--sun-misc-unsafe-memory-access=allow"]
-        setJvmArgs(["--sun-misc-unsafe-memory-access=allow"])
-    }
-}
-
-tasks.run {
-    jvmArgs += ["--enable-native-access=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED"]
-    if(java.targetCompatibility  >= JavaVersion.VERSION_24) {
-//        jvmArgs += "--sun-misc-unsafe-memory-access=allow"
-        setJvmArgs(["--sun-misc-unsafe-memory-access=allow"])
-    }
-}
-
 run {
   doFirst {
      if (System.getProperty("DEBUG", "false") == "true") {
@@ -113,6 +93,7 @@ run {
     args = ['run', mainVerticleName, "--redeploy=$watchForChange", "--launcher-class=$launcherClassName", 
       "--on-redeploy=$doOnChange", "--conf=src/main/resources/application-conf.json",
       "--java-opts=-Dvertx.disableFileCaching=true", "-PcompileOnly", debug]
+// --sun-misc-unsafe-memory-access=allow"
   }
   if (project.hasProperty("compileOnly")) {
     dependsOn jooqGenerate
@@ -121,7 +102,6 @@ run {
 
 kotlin {
   // change if out of memory
-  jvmToolchain(javaTargetVersion)
   kotlinDaemonJvmArgs = ["-Xmx512m", "-Xms256m", "-XX:+UseParallelGC"]
 }
 
@@ -135,8 +115,8 @@ distZip {
     dependsOn("shadowJar")
 }
 
-
 protobuf {
+
     protoc {
         artifact = "com.google.protobuf:protoc:3.2.0"
     }
@@ -159,33 +139,32 @@ protobuf {
 }
 
 dependencies {
-    implementation(platform("io.vertx:vertx-stack-depchain:$vertxVersion"))
-    annotationProcessor("org.hibernate.orm:hibernate-jpamodelgen:$hibernateVersion")
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.18.3")
+    implementation platform("io.vertx:vertx-stack-depchain:$vertxVersion")
+    annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen:$hibernateVersion"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.18.3"
     implementation "io.vertx:vertx-grpcio-server:$vertxVersion"
     implementation "io.vertx:vertx-grpcio-client:$vertxVersion"
 //    shadow gradleApi()
-    implementation("io.vertx:vertx-core:$vertxVersion")
-    implementation("io.vertx:vertx-rx-java3:$vertxVersion")
-    implementation("io.vertx:vertx-config:$vertxVersion")
-    implementation("io.vertx:vertx-web:$vertxVersion")
+    implementation "io.vertx:vertx-core:$vertxVersion"
+    implementation "io.vertx:vertx-rx-java3:$vertxVersion"
+    implementation "io.vertx:vertx-config:$vertxVersion"
+    implementation "io.vertx:vertx-web:$vertxVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-//    implementation "io.vertx:vertx-web-api-contract:$vertxVersion"
-    implementation("io.vertx:vertx-jdbc-client:$vertxVersion")
-    implementation("io.vertx:vertx-web-templ-thymeleaf:$vertxVersion")
-    implementation("io.vertx:vertx-grpc:$vertxVersion")
-    implementation("io.vertx:vertx-grpc-client:$vertxVersion")
-    implementation("io.agroal:agroal-pool:2.5")
-    runtimeOnly group: 'com.h2database', name: 'h2', version: '2.3.232'
-    implementation("org.xerial:sqlite-jdbc:3.46.0.0")
-    implementation("io.vertx:vertx-mysql-client:$vertxVersion")
-    implementation("io.vertx:vertx-pg-client:$vertxVersion")
-    implementation('org.mariadb.jdbc:mariadb-java-client:3.4.1')
-    implementation('org.jooq:jooq')
-    implementation('org.jooq:jooq-codegen')
-    implementation('org.jooq:jooq-meta')
-    implementation("javax.annotation:javax.annotation-api:1.3.2")
-    runtimeOnly("org.postgresql:postgresql:42.7.3")
+    implementation "io.vertx:vertx-jdbc-client:$vertxVersion"
+    implementation "io.vertx:vertx-web-templ-thymeleaf:$vertxVersion"
+    implementation "io.vertx:vertx-grpc:$vertxVersion"
+    implementation "io.vertx:vertx-grpc-client:$vertxVersion"
+    implementation "io.agroal:agroal-pool:2.5"
+    runtimeOnly "com.h2database:h2:2.4.240"
+    implementation "org.xerial:sqlite-jdbc:3.46.0.0"
+    implementation "io.vertx:vertx-mysql-client:$vertxVersion"
+    implementation "io.vertx:vertx-pg-client:$vertxVersion"
+    implementation "org.mariadb.jdbc:mariadb-java-client:3.4.1"
+    implementation "org.jooq:jooq"
+    implementation "org.jooq:jooq-codegen"
+    implementation "org.jooq:jooq-meta"
+    implementation "javax.annotation:javax.annotation-api:1.3.2"
+    runtimeOnly "org.postgresql:postgresql:42.7.4"
 
     implementation "io.vertx:vertx-grpc-server:$vertxVersion"
     implementation "io.vertx:vertx-grpc-protoc-plugin:$vertxVersion"
@@ -195,7 +174,7 @@ dependencies {
 
     implementation "io.github.microutils:kotlin-logging-jvm:2.0.11"
 
-    compileOnly"org.hibernate:hibernate-core:$hibernateVersion"
+    compileOnly "org.hibernate:hibernate-core:$hibernateVersion"
     compileOnly "org.hibernate.orm:hibernate-agroal:$hibernateVersion"
     compileOnly "com.oracle.database.jdbc:ojdbc11:23.8.0.25.04"
     compileOnly "jakarta.persistence:jakarta.persistence-api:3.2.0"
@@ -206,30 +185,16 @@ dependencies {
 //    implementation "org.hibernate.validator:hibernate-validator:9.0.0.Final"
 //    implementation "org.hibernate:hibernate-validator-annotation-processor:9.0.0.Beta3"
 
-    testImplementation("io.vertx:vertx-lang-kotlin:$kotlin_version")
-    testImplementation("io.vertx:vertx-lang-kotlin-coroutines:$kotlin_version")
-    testImplementation("io.vertx:vertx-junit5:$vertxVersion")
-    testImplementation("org.junit.jupiter:junit-jupiter:$junitJupiterVersion")
-    testImplementation("junit:junit:4.13.2")
+    testImplementation "io.vertx:vertx-lang-kotlin:$kotlin_version"
+    testImplementation "io.vertx:vertx-lang-kotlin-coroutines:$kotlin_version"
+    testImplementation "io.vertx:vertx-junit5:$vertxVersion"
+    testImplementation "org.junit.jupiter:junit-jupiter:$junitJupiterVersion"
+    testImplementation "junit:junit:4.13.2"
 
-    implementation("dmo.fs.utils:generate:0.0.1")
+    implementation "dmo.fs.utils:generate:0.0.1"
 }
 
 apply plugin: "nu.studer.jooq"
-
-//shadowJar {
-//  zip64 = true
-//
-//  archiveClassifier = "fat"
-//
-//  mergeServiceFiles {
-//    include "META-INF/services/io.vertx.core.spi.VerticleFactory"
-//  }
-//
-//  manifest{
-//    attributes 'Main-Verticle': mainVerticleName
-//  }
-//}
 
 test {
     // Use junit platform for unit tests
@@ -240,3 +205,4 @@ test {
         events "PASSED", "FAILED", "SKIPPED"
     }
 }
+
